# SlimeFarmLocator

./: README.md
check_single_seed/: image.properties  list.txt  mask.properties  name.csv  search-seed.py  search.properties  start.bat
findslime/: data.py  delete.py  get_max_seed.py  数据处理.bat
findslime/data/: seeds_with_count_above_55.json
findslime_cuda/: main.cu  main5.cu  main6.cu  main7.cu
findslime_rust/: Cargo.toml  readme.md
findslime_rust/src/: main.rs
seed_backup_data/: data.py  data_unzip.py  data_zip.py  get_some_good_seed.py  getseed.bat  unzip.bat  yanzheng.bat  yanzheng.py  zip.bat
seed_backup_data/backup/: metadata.json
seed_backup_data/data/: get_list_of_seed.py  hebing.py
seed_backup_data/data/used/: seed_370-400.json  seed_400-410.json  seed_410-420.json  seed_420-430.json
