[package]
name = "findslime_debug"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"

[profile.release]
# 优化等级：0—3 或 "z"/"s"（z 为最小化体积，s 为体积与速度折中）
opt-level = 3

# 启用链接时优化（Link Time Optimization）
lto = true

# 将所有代码放到同一 codegen 单元里以利于跨模块内联
codegen-units = 1

# 关闭运行时整数溢出检查（release 模式默认已关闭，可显式指定）
overflow-checks = false

# Panic 时直接中止进程，省去 Unwind 开销
panic = "abort"

# 不保留调试信息
debug = false